// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCardt debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCardt debe de mostrar correctamente con el titulo personalizado 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Hola munfo
  </h1>
</div>
`;
